# VL_Off_Project

./: .gitignore  DOCKER_README.md  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json
backend/: .dockerignore  .gitignore  BACKEND_PROJECT.md  Dockerfile  README  pyproject.toml  requirements.txt
backend/app/: .env.template  main.py
backend/app/api/: __init__.py
backend/app/api/api_v1/: __init__.py
backend/app/api/api_v1/blackouts/: crud.py  dependencies.py  schemas.py  views.py
backend/app/core/: config.py  redis_client.py
backend/app/core/models/: __init__.py  blackouts.py  db_helper.py
backend/app/utils/: __init__.py  filters.py  key_builder.py  regexp.py
frontend/: .dockerignore  .env.local.example  .gitignore  Dockerfile  Dockerfile.dev  package-lock.json  package.json  tsconfig.json
frontend/src/app/: YMap.module.css  globals.css  globals.scss  layout.tsx  not-found.module.scss  not-found.tsx  page.module.css  page.module.scss  page.tsx
frontend/src/components/: AddressHeader.tsx  BarChart.tsx  BlackoutMarker.tsx  MainHeader.tsx  MockInitializer.tsx  PreferAddress.tsx  PreferAddressBtn.module.scss  PreferAddressBtn.tsx  PreferAddsressLink.module.scss  PreferAddsressLink.tsx  Search.module.scss  Search.tsx  Users.tsx  YMap.tsx  YaMap.tsx
frontend/src/constants/: mapConfig.ts
frontend/src/hooks/: useFavoriteId.ts
frontend/src/mocks/: browser.ts  handlers.ts  server.ts
frontend/src/providers/: PopupContext.tsx
nginx/: Dockerfile  default.conf  nginx.conf  nginx.dev.conf  start-ssl.conf
(+33 files in other folders)
